objects/Quality_Control__c.object
<CustomObject>
    <fields>
        <fullName>ACV_To_Buyer_Label__c</fullName>
        <description>ACV to Buyer Postage Label.</description>
        <inlineHelpText>ACV to Buyer Postage Label.</inlineHelpText>
        <label>ACV To Buyer Label</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ACV_To_Buyer_Tracking_Code__c</fullName>
        <description>ACV to Buyer Tracking Code.</description>
        <inlineHelpText>ACV to Buyer Tracking Code.</inlineHelpText>
        <label>ACV To Buyer Tracking Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACV_To_Seller_Label__c</fullName>
        <description>ACV to Seller Postage Label.</description>
        <inlineHelpText>ACV to Seller Postage Label.</inlineHelpText>
        <label>ACV To Seller Label</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ACV_To_Seller_Tracking_Code__c</fullName>
        <description>ACV to Seller Tracking Code.</description>
        <inlineHelpText>ACV to Seller Tracking Code.</inlineHelpText>
        <label>ACV To Seller Tracking Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Details__c</fullName>
        <description>This is a manually entered field populated by the user who is creating the Quality control record via the New QC Flow.  This field will also be editable outside of the flow so updates can be made.</description>
        <inlineHelpText>Field for elaborating on the title problems selected and adding color to the issues beyond the selections.</inlineHelpText>
        <label>Additional Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Auction__c</fullName>
        <formula>Case__r.Auction_Number_Case__c</formula>
        <label>Auction</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buyer_Seller_Info_Incomplete_Incorrect__c</fullName>
        <formula>INCLUDES( Issue__c , &apos;Buyer/Seller Info Incomplete/Incorrect&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Buyer/Seller Info Incomplete/Incorrect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Buyer_To_ACV_Label__c</fullName>
        <description>Buyer To ACV Postage Label.</description>
        <inlineHelpText>Buyer To ACV Postage Label.</inlineHelpText>
        <label>Buyer To ACV Label</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Buyer_To_ACV_Tracking_Code__c</fullName>
        <description>Buyer To ACV Tracking Code.</description>
        <inlineHelpText>Buyer To ACV Tracking Code.</inlineHelpText>
        <label>Buyer To ACV Tracking Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Can_be_solved_in_house__c</fullName>
        <description>used in the New Title QC Flow to identify if the problems identified can ALL be solved in house.</description>
        <label>Can be solved in house</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Type__c</fullName>
        <formula>Case__r.RecordType.Name</formula>
        <label>Case Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Quality Control</relationshipLabel>
        <relationshipName>Quality_Control</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Caught_Error__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Caught Error</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quality_Control1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Caused_Missed_Error__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Caused/Missed Error</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quality_Control</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Time_QC_Closed__c</fullName>
        <description>Date time the quality control record is closed  - populated via QC Date time closed date</description>
        <label>Date Time QC Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Error_Count__c</fullName>
        <formula>IF(  Buyer_Seller_Info_Incomplete_Incorrect__c  = True, 1, 0) +
IF( Filed_Incorrectly__c = True, 1, 0) +
IF( Incomplete_Vehicle_Info__c = True, 1, 0) +
IF( Missed_AGT_Signature__c  = True, 1, 0) +
IF( Missing_Notary__c  = True, 1, 0) +
IF( ODOM_Date__c  = True, 1, 0) +
IF( Other__c = True, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Error Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Filed_Incorrectly__c</fullName>
        <formula>INCLUDES( Issue__c , &apos;Filed Incorrectly&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Filed Incorrectly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incomplete_Vehicle_Info__c</fullName>
        <formula>INCLUDES( Issue__c , &apos;Incomplete Vehicle Info&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incomplete Vehicle Info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issue__c</fullName>
        <description>Issue picklist options should always align with the title problem field on case.  If updating options on this field they must also be updated their as well</description>
        <label>Issue</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Missing Notary</fullName>
                </value>
                <value>
                    <fullName>Incorrect Vehicle Information on Title</fullName>
                </value>
                <value>
                    <fullName>Odometer Discrepancy</fullName>
                </value>
                <value>
                    <fullName>Missing Signature</fullName>
                </value>
                <value>
                    <fullName>Reassignment Error</fullName>
                </value>
                <value>
                    <fullName>Write-Overs</fullName>
                </value>
                <value>
                    <fullName>Reassigned to Wrong Purchaser</fullName>
                </value>
                <value>
                    <fullName>Missing Document(s)</fullName>
                </value>
                <value>
                    <fullName>Damaged Title</fullName>
                </value>
                <value>
                    <fullName>Listing Error</fullName>
                </value>
                <value>
                    <fullName>More Recently Issued Title</fullName>
                </value>
                <value>
                    <fullName>Buyer Requested Duplicate</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Buyer/Seller Info Incomplete/Incorrect</fullName>
                    <isActive>false</isActive>
                    <label>Buyer/Seller Info Incomplete/Incorrect</label>
                </value>
                <value>
                    <fullName>Filed Incorrectly</fullName>
                    <isActive>false</isActive>
                    <label>Filed Incorrectly</label>
                </value>
                <value>
                    <fullName>Incomplete Vehicle Info</fullName>
                    <isActive>false</isActive>
                    <label>Incomplete Vehicle Info</label>
                </value>
                <value>
                    <fullName>Missed AGT Signature</fullName>
                    <isActive>false</isActive>
                    <label>Missed AGT Signature</label>
                </value>
                <value>
                    <fullName>ODOM/Date</fullName>
                    <isActive>false</isActive>
                    <label>ODOM/Date</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Missed_AGT_Signature__c</fullName>
        <formula>INCLUDES( Issue__c , &apos;Missed AGT Signature&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Missed AGT Signature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Missing_Notary__c</fullName>
        <formula>INCLUDES( Issue__c , &apos;Missing Notary&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Missing Notary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ODOM_Date__c</fullName>
        <formula>INCLUDES( Issue__c , &apos;ODOM/Date&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ODOM/Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Details__c</fullName>
        <label>Other Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <formula>INCLUDES(  Issue__c  , &apos;Other&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Problems_Open__c</fullName>
        <label>Problems Open</label>
        <summaryFilterItems>
            <field>QC_Problem_Identified__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Resolved, Invalid</value>
        </summaryFilterItems>
        <summaryForeignKey>QC_Problem_Identified__c.Quality_Control__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Problems_Resolved__c</fullName>
        <description>Number of problem identified records associated with the quality Control record that are closed - used in validation rule to check that all problems are resolved before allowing the QC record to be marked as closed.</description>
        <label>Problems Resolved</label>
        <summaryFilterItems>
            <field>QC_Problem_Identified__c.Status__c</field>
            <operation>equals</operation>
            <value>Resolved</value>
        </summaryFilterItems>
        <summaryForeignKey>QC_Problem_Identified__c.Quality_Control__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Reported_By__c</fullName>
        <label>Reported By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Title Clerk</fullName>
                </value>
                <value>
                    <fullName>Title Admin</fullName>
                </value>
                <value>
                    <fullName>Buyer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Return_Address_Postage_Label_URL__c</fullName>
        <description>Return Address Postage Label URL to ACV.</description>
        <inlineHelpText>Return Address Postage Label URL to ACV.</inlineHelpText>
        <label>Return Address Postage Label URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Return_Address_Tracking_Code__c</fullName>
        <description>Return Address Tracking Code to ACV.</description>
        <inlineHelpText>Return Address Tracking Code to ACV.</inlineHelpText>
        <label>Return Address Tracking Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return_Postage_Label_Contact_Name__c</fullName>
        <description>Buyer/FloorPlan contact name used in the Title email template.</description>
        <inlineHelpText>Buyer/FloorPlan contact name used in the Title email template.</inlineHelpText>
        <label>Return Postage Label Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return_Postage_Label_Email__c</fullName>
        <description>Email for either buyer/floorplan</description>
        <inlineHelpText>Email for either buyer/floorplan</inlineHelpText>
        <label>Return Postage Label Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Seller_Account__c</fullName>
        <description>Selling dealership on the title case related to this QC record - used in the Update QC Owner Flow.</description>
        <formula>CASESAFEID(Case__r.Seller_Dealership__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Seller Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seller_Assistance_Needed__c</fullName>
        <description>Used to identify if title problems require the seller&apos;s assistance to fix</description>
        <label>Seller Assistance Needed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Seller_To_ACV_Label__c</fullName>
        <description>Seller To ACV Postage Label.</description>
        <inlineHelpText>Seller To ACV Postage Label.</inlineHelpText>
        <label>Seller To ACV Label</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Seller_To_ACV_Tracking_Code__c</fullName>
        <description>Seller To ACV Tracking Code.</description>
        <inlineHelpText>Seller To ACV Tracking Code.</inlineHelpText>
        <label>Seller To ACV Tracking Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Postage_Email_To_Buyer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Send Email to Buyer to inform that return potage label is ready.</description>
        <inlineHelpText>Send Email to Buyer to inform that return potage label is ready.</inlineHelpText>
        <label>Send Postage Email To Buyer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ship_To_Postage_Label_URL_del__c</fullName>
        <description>Postage Label URL to send the package to buyer/seller.</description>
        <inlineHelpText>Postage Label URL to send the package to buyer/seller.</inlineHelpText>
        <label>Ship To Postage Label URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Ship_To_Tracking_Code__c</fullName>
        <description>Tracking Code for the package shipped to buyer/seller.</description>
        <inlineHelpText>Tracking Code for the package shipped to buyer/seller.</inlineHelpText>
        <label>Ship To Tracking Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Field is used within the QC flow for initial status  - relies on the problems open field.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Working</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title_Scanner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Title Scanner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>QC_Title_Scanner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Problem_Count__c</fullName>
        <description>Total number of problem Identified Records associated with the Quality Control record regardless of status.  used in Validation rule on QC object.</description>
        <label>Total Problem Count</label>
        <summaryForeignKey>QC_Problem_Identified__c.Quality_Control__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UserReportFilter__c</fullName>
        <formula>IF(
OR(  Caused_Missed_Error__c =  $User.Id,  $Profile.Name = &apos;Title Manager&apos;, $Profile.Name = &apos;System Administrator&apos;,$Profile.Name = &apos;Read Only - Custom&apos; ,$Permission.Quality_Control_Admin = TRUE), 1, 0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UserReportFilter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Quality Control</label>
    <nameField>
        <displayFormat>QC-{000000}</displayFormat>
        <label>QC Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quality Control</pluralLabel>
    <recordTypes>
        <fullName>At_Buyer</fullName>
        <active>true</active>
        <label>At Buyer</label>
    </recordTypes>
    <recordTypes>
        <fullName>At_Clerking</fullName>
        <active>true</active>
        <label>At Clerking</label>
    </recordTypes>
    <recordTypes>
        <fullName>At_Outbound</fullName>
        <active>true</active>
        <label>At Outbound</label>
    </recordTypes>
    <recordTypes>
        <fullName>At_Problem</fullName>
        <active>true</active>
        <description>This record type is used when a QC record is created while the title case is in a status of problem.</description>
        <label>At Problem</label>
    </recordTypes>
    <recordTypes>
        <fullName>Titles_QC</fullName>
        <active>true</active>
        <label>At Reciept</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Can_not_close_QC_with_Open_QCPI_Records</fullName>
        <active>true</active>
        <description>The Quality Control Record Can not be placed in a closed status if any associated problem Identified records are unresolved.</description>
        <errorConditionFormula>AND(
ISCHANGED( Status__c),
ISPICKVAL(Status__c, &quot;Closed&quot;),
Total_Problem_Count__c  &lt;&gt;  Problems_Resolved__c)</errorConditionFormula>
        <errorMessage>Please be sure all QC Problem Identified records are marked as Resolved - Use the Update Problem Status(es) button at the top right to resolve those issues.</errorMessage>
    </validationRules>
</CustomObject>